Fix alignment of user button on newer Firefox

--- a/src/frontend/packages/core/src/shared/components/page-header/page-header.component.scss
+++ b/src/frontend/packages/core/src/shared/components/page-header/page-header.component.scss
@@ -109,6 +109,7 @@ $bottom-index: $top-index - 1;
   &__menu-button {
     display: flex;
     justify-content: center;
+    padding: 5px 0;
   }
   &__username {
     align-items: center;
